# vectorclock-rs

./: Cargo.toml  README.rst
src/: clock.rs  lib.rs
