[package]
name = "vectorclock-rs"
version = "0.0.2"
authors = ["mhallin <mhallin@gmail.com>"]
description = "Vector clock implementation for distributed systems"
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/mhallin/vectorclock-rs"

[lib]
name = "vectorclock"
path = "src/lib.rs"
